GNOME Bugzilla – Bug 792042
decklinkaudiosrc: Extrapolate stream/hw reference timestamps when video frame is missing
Last modified: 2018-01-04 20:15:32 UTC
See commit message
Created attachment 366075 [details] [review] decklinkaudiosrc: Extrapolate stream/hw reference timestamps when video frame is missing Sometimes we might get an audio packet without a corresponding video frame. In these cases, the stream and hardware reference timestamps would be missing, because they're called on the video frame. Instead of potentially breaking stuff downstream that might depend on these, we now extrapolate them.
Review of attachment 366075 [details] [review]: ::: sys/decklink/gstdecklinkaudiosrc.cpp @@ +709,3 @@ self->processed += sample_count; + if (self->expected_stream_time != GST_CLOCK_TIME_NONE + && p.stream_timestamp == GST_CLOCK_TIME_NONE && !p.no_signal) { The same should also happen if there is no signal. There's not really any difference here for timestamps @@ +716,3 @@ + } + if (self->last_hardware_time != GST_CLOCK_TIME_NONE + && p.hardware_timestamp == GST_CLOCK_TIME_NONE && !p.no_signal) { Same
Created attachment 366296 [details] [review] decklinkaudiosrc: Extrapolate stream/hw reference timestamps when video frame is missing Sometimes we might get an audio packet without a corresponding video frame. In these cases, the stream and hardware reference timestamps would be missing, because they're called on the video frame. Instead of potentially breaking stuff downstream that might depend on these, we now extrapolate them.
Fixed, thanks.
Review of attachment 366296 [details] [review]: Good to go
Thanks, pushed.